home page has a few ways of displaying API data

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,8 @@
     <p><%= cat %> </p>
 <% end %>
 
+<%= @cat_facts %> <!-- all cats info -->
+
 <% @cat_facts.each do |fact| %>
     <p><%= fact %> </p>
 <% end %>
